Small adjustements to top container

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="mainContainer" class="superContainer">
-        <div class="fullScreen">
+        <div class="fullScreen topContainer">
             <div class="topTextDiv" style="display: none;">
                 <h1>Welcome to my portfolio</h1>
             </div>
@@ -27,7 +27,7 @@
                 <h2 class="firstLineBpt">Hi, I'm Michael and you've landed on my portfolio page.</h2>
                 <h2 class="secondLineBpt">I'm a <code class="codeAnimate">Junior Web Developer</code>..</h2>
             </div>    
-            <div class="aboutTextDiv" style="position: absolute;">
+            <div class="aboutTextDiv">
                 <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
             </div>
         </div>
