Debugged topnav and jquery animations

--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
                     </li>        
                   </ul>
                 </div>  
-              </nav>
-
+            </nav>
 
 <!--Set div containers for all sections-->
 <!--Start with main container-->
-    <div id="mainContainer" class=".container-fluid superContainer ">
-        <div class="fullScreen topContainer" id="Top">
+    <div id="mainContainer" class="main">
+        <div class="topContainer" id="Top">
             <div class="topTextDiv" style="display: none;">
                 <h1>Welcome to my portfolio</h1>
             </div>
@@ -57,12 +56,13 @@
                 <h2 class="firstLineBpt">Hi, I'm Michael and you've landed on my portfolio page.</h2>
                 <h2 class="secondLineBpt">I'm a <code class="codeAnimate">Junior Web Developer</code>..</h2>
             </div>   
-
+    </div>
 <!--About me container-->             
             <div class="aboutTextDiv" div="aboutme">
+                <p><h2>ABOUT ME</h2></p></br>
                 <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
             </div>
-        </div>
+        
 
 <!--Tech skills container-->
         <div class="frontEndDiv" id="aboutme">
