Added big icons to skill section

--- a/index.html
+++ b/index.html
@@ -67,18 +67,17 @@
 <!--Tech skills container with bootstrap grid-->
         <div class="frontEndDiv" id="aboutme">
             <h3>These are my front-end skills:</h3>
-            <div class="row text-center">
+            <div class="row text-center mx-auto">
                 <div class="col">
-                    <p>HTML and HTML5</p>
-                    <p>CSS</p>
+                    <p><img src="iconMap/html5.png" class="skillImg"> HTML5</p>
+                    <p><img src="iconMap/css.png" class="skillImg"> CSS</p>
                 </div>
                 <div class="col">
-                    <p>SCSS</p>
-                    <p>Jquery</p>
+                    <p><img src="iconMap/bootstrap.png" class="skillImg"> BOOTSTR</p>
+                    <p><img src="iconMap/jquery.png" class="skillImg"> JQUERY</p>
                 </div>
                 <div class="col">
-                    <p>Bootstrap</p>
-                    <p>Javascript</p>
+                    <p><img src="iconMap/javascript.png" class="skillImg"> JS</p>
                 </div>
             </div>
         </div>
